--- a/Scripts/Hypothesis_Testing.ipynb
+++ b/Scripts/Hypothesis_Testing.ipynb
@@ -301,7 +301,7 @@
         "# the observed and expected frequencies in the frequency table. This suggests a strong association between\n",
         "# the words used in reviews and the Amazon product ratings. This is further supported by the p value, which is\n",
         "# close to 0. Since the p value is small and less than significance level of 0.05, we can reject the null\n",
-        "# hypothesis. Therefore, there is enough evidence to suggesst that There is an association between certain words\n",
+        "# hypothesis. Therefore, there is enough evidence to suggest that there is an association between certain words\n",
         "# and Amazon product ratings.\n"
       ],
       "metadata": {
