Updated second hypothesis for clarity

--- a/Scripts/Hypothesis_Testing.ipynb
+++ b/Scripts/Hypothesis_Testing.ipynb
@@ -25,7 +25,7 @@
       "metadata": {
         "id": "CsaJqQTOjfTc"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +55,7 @@
         "id": "rCdq9WvBjjGL",
         "outputId": "20b83dee-a59a-4768-f956-3cefd1987939"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -171,7 +171,7 @@
         "id": "wFZ0z5pfjlCj",
         "outputId": "6f62b566-a6bf-45a0-8c31-14f5685c8970"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
       "metadata": {
         "id": "CAvktAQqjuRq"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -205,20 +205,21 @@
       "metadata": {
         "id": "qaFMUcgTxsxD"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "# Chi Square Test\n",
-        "# H0: There is no association between certain words and Amazon product ratings\n",
-        "# HA: There is an association between certain words and Amazon product ratings\n"
+        "# Research question: Are there specific words in the review text that are more commonly associated with different rating levels?\n",
+        "# H0: There is no association between specific words and Amazon product ratings\n",
+        "# HA: There is an association between specific words and Amazon product ratings\n"
       ],
       "metadata": {
         "id": "6yttrJjnqFTJ"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -254,7 +255,7 @@
         "id": "LwSwwFLSxodR",
         "outputId": "5d291207-471f-470a-8ed5-ba24deb9ef38"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,9 +300,10 @@
       "source": [
         "# The chi squared testic is extremely high, with a value of 71111, indicating a significant difference between\n",
         "# the observed and expected frequencies in the frequency table. This suggests a strong association between\n",
-        "# the words used in reviews and the Amazon product ratings. This is further supported by the p value, which is\n",
+        "# the words used in reviews and the Amazon product ratings. This means that specific words that are\n",
+        "# tend to be commonly assoicated with different rating levels. This is further supported by the p value, which is\n",
         "# close to 0. Since the p value is small and less than significance level of 0.05, we can reject the null\n",
-        "# hypothesis. Therefore, there is enough evidence to suggest that there is an association between certain words\n",
+        "# hypothesis. Therefore, there is enough evidence to suggest that there is an association between specific words\n",
         "# and Amazon product ratings.\n"
       ],
       "metadata": {
