--- a/Scripts/Hypothesis_Testing.ipynb
+++ b/Scripts/Hypothesis_Testing.ipynb
@@ -213,8 +213,8 @@
       "source": [
         "# Chi Square Test\n",
         "# Research question: Are there specific words in the review text that are more commonly associated with different rating levels?\n",
-        "# H0: There is no association between specific words and Amazon product ratings\n",
-        "# HA: There is an association between specific words and Amazon product ratings\n"
+        "# H0: There is no association between commonly used words and Amazon product ratings\n",
+        "# HA: There is an association between commonly used words and Amazon product ratings\n"
       ],
       "metadata": {
         "id": "6yttrJjnqFTJ"
